# cppdynamic

./: .travis.yml  CMakeLists.txt  README.md  cppdynamicDOCU.docx  test.cpp
bii/: parents.bii
include/cppdynamic/: any.h
